--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-pytest==7.4.4
+accelerate==0.26.1 
+bitsandbytes==0.42.0
+datasets==2.16.1 
+huggingface-hub==0.20.3
 langchain==0.1.1
+numpy==1.24.4
+pytest==7.4.4
 python-dotenv==1.0.1
+peft==0.8.2 
+tokenizers==0.15.1
+torch==2.2.0
+wandb==0.16.2 
+   
